--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <h1> Demo Weather Dashboard</h1>
+    <div class="container">
+        <div class="weather-input">
+            <h3>Enter a City<h3>
+            <input type="text" placeholder="Enter a City">
+            <button class="search-btn">Search</button>
+            <div class="seperator"></div>
+            <button class="location-btn">Use Current Location</button>
+        </div>
+        <div class="weather-data">
+            <div class="current-weather">
+                <div class="details">
+                    <h2>Lagos (2024-01-25)</h2>
+                    <h4>Temperature: 21.0°C</h4>
+                    <h4>Wind: 4.31 M/S</h4>
+                    <h4>Humidity: 83%</h4>
+                </div>
+                <div class="weather-icon">
+                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
+                    <h4>Moderate Rain</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
