Sending this, because I am a bit done with the html and css codes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -23,10 +24,70 @@
                     <h4>Wind: 4.31 M/S</h4>
                     <h4>Humidity: 83%</h4>
                 </div>
-                <div class="weather-icon">
+                <div class="icon">
                     <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
-                    <h4>Moderate Rain</h4>
+                    <h4>Sunny Day</h4>
                 </div>
+            </div>
+            <div class="days-forecast">
+                <h2>7-Day Forecast</h2>
+                <ul class="weather-card">
+                  <li class="card">
+                    <h3>(2025-01-23)</h3>
+                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
+                    <h4>Temp: 21.0°C</h4>
+                    <h4>Wind: 4.31 M/S</h4>
+                    <h4>Humidity: 83%</h4>
+                  </li>  
+
+                  <li class="card">
+                    <h3>(2025-01-23)</h3>
+                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
+                    <h4>Temp: 21.0°C</h4>
+                    <h4>Wind: 4.31 M/S</h4>
+                    <h4>Humidity: 83%</h4>
+                  </li>  
+
+                  <li class="card">
+                    <h3>(2025-01-23)</h3>
+                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
+                    <h4>Temp: 21.0°C</h4>
+                    <h4>Wind: 4.31 M/S</h4>
+                    <h4>Humidity: 83%</h4>
+                  </li>  
+
+                  <li class="card">
+                    <h3>(2025-01-23)</h3>
+                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
+                    <h4>Temperature: 21.0°C</h4>
+                    <h4>Wind: 4.31 M/S</h4>
+                    <h4>Humidity: 83%</h4>
+                  </li>  
+
+                  <li class="card">
+                    <h3>(2025-01-23)</h3>
+                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
+                    <h4>Temperature: 21.0°C</h4>
+                    <h4>Wind: 4.31 M/S</h4>
+                    <h4>Humidity: 83%</h4>
+                  </li>  
+
+                  <li class="card">
+                    <h3>(2025-01-23)</h3>
+                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
+                    <h4>Temp: 21.0°C</h4>
+                    <h4>Wind: 4.31 M/S</h4>
+                    <h4>Humidity: 83%</h4>
+                  </li>  
+
+                  <li class="card">
+                    <h3>(2025-01-23)</h3>
+                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
+                    <h4>Temp: 21.0°C</h4>
+                    <h4>Wind: 4.31 M/S</h4>
+                    <h4>Humidity: 83%</h4>
+                  </li>  
+                </ul>
             </div>
         </div>
     </div>
