--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="weather-input">
             <h3>Enter a City<h3>
-            <input type="text" placeholder="Enter a City">
+            <input class="city-input" type="text" placeholder="Lagos, London, Paris">
             <button class="search-btn">Search</button>
             <div class="seperator"></div>
             <button class="location-btn">Use Current Location</button>
@@ -31,65 +31,51 @@
             </div>
             <div class="days-forecast">
                 <h2>7-Day Forecast</h2>
-                <ul class="weather-card">
+                <ul class="weather-cards">              
                   <li class="card">
-                    <h3>(2025-01-23)</h3>
+                    <h3>(2025-01-23 )</h3>
                     <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
                     <h4>Temp: 21.0°C</h4>
                     <h4>Wind: 4.31 M/S</h4>
                     <h4>Humidity: 83%</h4>
-                  </li>  
+                  </li>   
 
                   <li class="card">
-                    <h3>(2025-01-23)</h3>
+                    <h3>(2025-01-23 )</h3>
                     <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
                     <h4>Temp: 21.0°C</h4>
                     <h4>Wind: 4.31 M/S</h4>
                     <h4>Humidity: 83%</h4>
-                  </li>  
+                  </li>   
 
                   <li class="card">
-                    <h3>(2025-01-23)</h3>
+                    <h3>(2025-01-23 )</h3>
                     <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
                     <h4>Temp: 21.0°C</h4>
                     <h4>Wind: 4.31 M/S</h4>
                     <h4>Humidity: 83%</h4>
-                  </li>  
+                  </li>   
 
                   <li class="card">
-                    <h3>(2025-01-23)</h3>
-                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
-                    <h4>Temperature: 21.0°C</h4>
-                    <h4>Wind: 4.31 M/S</h4>
-                    <h4>Humidity: 83%</h4>
-                  </li>  
-
-                  <li class="card">
-                    <h3>(2025-01-23)</h3>
-                    <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
-                    <h4>Temperature: 21.0°C</h4>
-                    <h4>Wind: 4.31 M/S</h4>
-                    <h4>Humidity: 83%</h4>
-                  </li>  
-
-                  <li class="card">
-                    <h3>(2025-01-23)</h3>
+                    <h3>(2025-01-23 )</h3>
                     <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
                     <h4>Temp: 21.0°C</h4>
                     <h4>Wind: 4.31 M/S</h4>
                     <h4>Humidity: 83%</h4>
-                  </li>  
+                  </li>   
 
                   <li class="card">
-                    <h3>(2025-01-23)</h3>
+                    <h3>(2025-01-23 )</h3>
                     <img src="https://openweathermap.org/img/w/01d.png" alt="weather-icon">
                     <h4>Temp: 21.0°C</h4>
                     <h4>Wind: 4.31 M/S</h4>
                     <h4>Humidity: 83%</h4>
-                  </li>  
+                  </li>   
                 </ul>
             </div>
         </div>
     </div>
+
+    <script src="weather.js"></script>
 </body>
 </html>
